# Simple-Template-Tests-in-C-

./: .gitignore  CMakeLists.txt  README.md
include/: test.h
src/main/: test.cpp
